server/vm-k8s/k8s/overlay/grafana-pdc/grafana-pdc/networkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana-pdc-restrict
spec:
  podSelector:
    matchLabels:
      name: grafana-pdc-agent

  policyTypes:
    - Ingress
    - Egress

  # ingress:
  #   - ports:
  #       - protocol: TCP
  #         port: 9876

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app: prometheus
      ports:
        - protocol: TCP
          port: 9090

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    - to:
        - ipBlock:
            # private-datasource-connect-prod-eu-west-0.grafana.net:22
            cidr: 34.76.107.106/32
      ports:
        - protocol: TCP
          port: 22
    - to:
        - ipBlock:
            # private-datasource-connect-api-prod-eu-west-0.grafana.net:443
            cidr: 34.36.89.72/32
      ports:
        - protocol: TCP
          port: 443
